[gd_scene load_steps=6 format=3 uid="uid://bmheadwtu10fp"]

[ext_resource type="Script" uid="uid://dvih4jb527ldp" path="res://scripts/buildings/buildable_splitter.gd" id="1_jbyt7"]
[ext_resource type="PackedScene" uid="uid://duj0a22bmdyba" path="res://scenes/conveyors/from_direction_controller.tscn" id="2_5mv3y"]
[ext_resource type="PackedScene" uid="uid://uutkrtphv1xr" path="res://scenes/conveyors/splitter_sprite_controller.tscn" id="3_6kqi7"]
[ext_resource type="PackedScene" uid="uid://lnerfb6s67on" path="res://scenes/conveyors/direction_controller.tscn" id="4_5b51y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lurkb"]
size = Vector2(9, 9)

[node name="BuildableSplitter" type="Node2D"]
script = ExtResource("1_jbyt7")

[node name="FromDirectionController" parent="." instance=ExtResource("2_5mv3y")]

[node name="SplitterSpriteController" parent="." instance=ExtResource("3_6kqi7")]

[node name="DirectionController" parent="." instance=ExtResource("4_5b51y")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DirectionController"]
shape = SubResource("RectangleShape2D_lurkb")

[connection signal="direction_changed" from="FromDirectionController" to="." method="_on_from_direction_controller_direction_changed"]
[connection signal="directions_changed" from="DirectionController" to="." method="_on_direction_controller_directions_changed"]
